Fix display on firefox

--- a/css/bootstrap/login.css
+++ b/css/bootstrap/login.css
@@ -5,7 +5,7 @@ body{
     background:url(/media/images/login/login-bg.png) center -30px no-repeat;
 }
 .login-bg-2{
-    background:url(/media/images/login/login-bg-2.png) center bottom no-repeat;
+    background:url(/media/images/login/login-bg-2.png) center no-repeat;
 }
 .form-signin
 {
